update sqlite and backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -213,8 +213,7 @@
     <div class="navbar">
         <a href="https://live.bilibili.com/1825831614">直播间</a>
         <a href="/">歌单</a>
-        <a href="/history">垂名青史</a>
-        <a href="/rank">圣人排行榜</a>
+        <a href="/admin">后台</a>
     </div>
 
     <!-- 歌手介绍 -->
