--- a/templates/admin.html
+++ b/templates/admin.html
@@ -129,6 +129,7 @@
     <div class="navbar">
         <a href="/">歌单</a>
         <a href="/admin">后台</a>
+        <a href="/admin/logout" style="color:#e74c3c;">退出登录</a>
     </div>
 
     <div class="container">
